fix title tile app alignment

--- a/front/src/controls/apps/apps.scss
+++ b/front/src/controls/apps/apps.scss
@@ -8,7 +8,7 @@
 		border-radius: 10px;
 		display: flex;
 		flex-direction: column;
-		//align-items: center;
+		align-items: center;
 		justify-content: center;
 		position: relative;
 	}
